--- a/LandingPage/styles.css
+++ b/LandingPage/styles.css
@@ -15,15 +15,15 @@ body {
 
 /* Header styles */
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
+    background-color:black;
+    color: #333;
+     padding: 10px 0;
+     position:relative;
 }
 
 nav ul {
     list-style: none;
     text-align: center;
-    
 }
 
 nav ul li {
